还原数据的配置

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 /uploads/
 /system/config.inc.php
 /system/config/install.lock.php
-# /system/config/database.php
+/system/config/database.php
 .DS_Store
 /api/uc.php
 /uc_client/
